all code up to third website scrape

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,9 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/bin/chromedriver\n"
+     ]
+    }
+   ],
    "source": [
     "# https://splinter.readthedocs.io/en/latest/drivers/chrome.html\n",
     "!which chromedriver"
@@ -26,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +43,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get latest news article and paragraph"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,6 +74,7 @@
     }
    ],
    "source": [
+    "#Scape Page\n",
     "html = browser.html\n",
     "soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
@@ -79,49 +95,97 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Retrieve page with the requests module\n",
-    "response = requests.get(url)"
+    "## Get featured image from MArs website"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#obtain featured image from Space Images website\n",
+    "url = 'https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars'\n",
+    "browser.visit(url)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.jpl.nasa.gov//spaceimages/images/mediumsize/PIA18292_ip.jpg'"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Scrape Page\n",
+    "html = browser.html\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "browser.click_link_by_partial_text('FULL IMAGE')\n",
+    "\n",
+    "html = browser.html\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "image_relative_path = soup.find('img', class_='fancybox-image')['src']\n",
+    "featured_image_url = 'https://www.jpl.nasa.gov/' + image_relative_path\n",
+    "featured_image_url"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get latest weather from Twitter page"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#obtain featured image from Space Images website\n",
+    "url = 'https://twitter.com/marswxreport?lang=en'\n",
+    "browser.visit(url)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'InSight sol 506 (2020-04-29) low -93.5ºC (-136.2ºF) high -3.7ºC (25.3ºF)\\nwinds from the WNW at 4.5 m/s (10.1 mph) gusting to 15.6 m/s (34.8 mph)\\npressure at 6.80 hPa'"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Scrape Page\n",
+    "html = browser.html\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "mars_weather = soup.find('span', text = re.compile('InSight sol')).text\n",
+    "\n",
+    "mars_weather = mars_weather.replace('InSight s', 'S') \n"
+   ]
   },
   {
    "cell_type": "code",
