all code up to third website scrape

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -82,16 +82,15 @@
     "\n",
     "articles = grid.find_all('li', class_='slide')\n",
     "\n",
-    "news_title_list = []\n",
-    "news_p_list = []\n",
-    "\n",
-    "for article in articles:\n",
     "    news_title = article.find('div', class_='content_title').text\n",
-    "    news_title_list.append(news_title)\n",
-    "    news_p = article.find('div', class_='article_teaser_body').text\n",
-    "    news_p_list.append(news_p)\n",
     "\n",
-    "print('Scrapping Complete!')"
+    "    news_p = article.find('div', class_='article_teaser_body').text\n",
+    "\n",
+    "print('Scrapping Complete!')\n",
+    "\n",
+    "print(news_title)\n",
+    "\n",
+    "print(news_p)"
    ]
   },
   {
@@ -139,7 +138,11 @@
     "soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
     "image_relative_path = soup.find('img', class_='fancybox-image')['src']\n",
+    "\n",
     "featured_image_url = 'https://www.jpl.nasa.gov/' + image_relative_path\n",
+    "\n",
+    "print('Scrapping Complete!')\n",
+    "\n",
     "featured_image_url"
    ]
   },
@@ -184,7 +187,11 @@
     "\n",
     "mars_weather = soup.find('span', text = re.compile('InSight sol')).text\n",
     "\n",
-    "mars_weather = mars_weather.replace('InSight s', 'S') \n"
+    "mars_weather = mars_weather.replace('InSight s', 'S') \n",
+    "\n",
+    "print('Scrapping Complete!')\n",
+    "\n",
+    "mars_weather"
    ]
   },
   {
