--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,14 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scrapping Complete!\n"
+      "Scrapping Complete!\n",
+      "Meet the People Behind NASA's Perseverance Rover\n",
+      "These are the scientists and engineers who built NASA's next Mars rover and who will guide it to a safe landing in Jezero Crater. \n"
      ]
     }
    ],
@@ -82,11 +84,11 @@
     "\n",
     "grid = soup.find('ul', class_='item_list')\n",
     "\n",
-    "articles = grid.find_all('li', class_='slide')\n",
+    "article = grid.find('li', class_='slide')\n",
     "\n",
-    "    news_title = article.find('div', class_='content_title').text\n",
+    "news_title = article.find('div', class_='content_title').text\n",
     "\n",
-    "    news_p = article.find('div', class_='article_teaser_body').text\n",
+    "news_p = article.find('div', class_='article_teaser_body').text\n",
     "\n",
     "print('Scrapping Complete!')\n",
     "\n",
@@ -104,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,18 +117,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'https://www.jpl.nasa.gov//spaceimages/images/mediumsize/PIA18292_ip.jpg'"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/effibatumi/anaconda3/lib/python3.7/site-packages/splinter/driver/webdriver/__init__.py:528: FutureWarning: browser.find_link_by_partial_text is deprecated. Use browser.links.find_by_partial_text instead.\n",
+      "  FutureWarning,\n"
+     ]
     }
    ],
    "source": [
@@ -135,16 +135,35 @@
     "soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
     "browser.click_link_by_partial_text('FULL IMAGE')\n",
-    "\n",
+    "#browser.links.find_by_partial_text('FULL IMAGE')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://www.jpl.nasa.gov//spaceimages/images/mediumsize/PIA17832_ip.jpg'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "html = browser.html\n",
     "soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
-    "image_relative_path = soup.find('img', class_='fancybox-image')['src']\n",
+    "image_relative_path = soup.find('img', class_='fancybox-image')\n",
+    "image_relative_path = image_relative_path['src']\n",
     "\n",
     "featured_image_url = 'https://www.jpl.nasa.gov/' + image_relative_path\n",
     "\n",
-    "print('Scrapping Complete!')\n",
-    "\n",
+    "image_relative_path\n",
     "featured_image_url"
    ]
   },
@@ -157,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,16 +187,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scrapping Complete!\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "'InSight sol 506 (2020-04-29) low -93.5ºC (-136.2ºF) high -3.7ºC (25.3ºF)\\nwinds from the WNW at 4.5 m/s (10.1 mph) gusting to 15.6 m/s (34.8 mph)\\npressure at 6.80 hPa'"
+       "'Sol 506 (2020-04-29) low -93.5ºC (-136.2ºF) high -3.7ºC (25.3ºF)\\nwinds from the WNW at 4.5 m/s (10.1 mph) gusting to 15.6 m/s (34.8 mph)\\npressure at 6.80 hPa'"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,16 +242,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scrapping Complete!\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<table class=\"tablepress tablepress-id-p-mars\" id=\"tablepress-p-mars\"><tbody><tr class=\"row-1 odd\"><td class=\"column-1\"><strong>Equatorial Diameter:</strong></td><td class=\"column-2\">6,792 km<br/></td></tr><tr class=\"row-2 even\"><td class=\"column-1\"><strong>Polar Diameter:</strong></td><td class=\"column-2\">6,752 km<br/></td></tr><tr class=\"row-3 odd\"><td class=\"column-1\"><strong>Mass:</strong></td><td class=\"column-2\">6.39 × 10^23 kg<br/> (0.11 Earths)</td></tr><tr class=\"row-4 even\"><td class=\"column-1\"><strong>Moons:</strong></td><td class=\"column-2\">2 (<a href=\"https://space-facts.com/moons/phobos/\">Phobos</a> &amp; <a href=\"https://space-facts.com/moons/deimos/\">Deimos</a>)</td></tr><tr class=\"row-5 odd\"><td class=\"column-1\"><strong>Orbit Distance:</strong></td><td class=\"column-2\">227,943,824 km<br/> (1.38 AU)</td></tr><tr class=\"row-6 even\"><td class=\"column-1\"><strong>Orbit Period:</strong></td><td class=\"column-2\">687 days (1.9 years)<br/></td></tr><tr class=\"row-7 odd\"><td class=\"column-1\"><strong>Surface Temperature: </strong></td><td class=\"column-2\">-87 to -5 °C</td></tr><tr class=\"row-8 even\"><td class=\"column-1\"><strong>First Record:</strong></td><td class=\"column-2\">2nd millennium BC</td></tr><tr class=\"row-9 odd\"><td class=\"column-1\"><strong>Recorded By:</strong></td><td class=\"column-2\">Egyptian astronomers</td></tr></tbody></table>"
+       "[                      0                              1\n",
+       " 0  Equatorial Diameter:                       6,792 km\n",
+       " 1       Polar Diameter:                       6,752 km\n",
+       " 2                 Mass:  6.39 × 10^23 kg (0.11 Earths)\n",
+       " 3                Moons:            2 (Phobos & Deimos)\n",
+       " 4       Orbit Distance:       227,943,824 km (1.38 AU)\n",
+       " 5         Orbit Period:           687 days (1.9 years)\n",
+       " 6  Surface Temperature:                   -87 to -5 °C\n",
+       " 7         First Record:              2nd millennium BC\n",
+       " 8          Recorded By:           Egyptian astronomers]"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,6 +291,68 @@
    "metadata": {},
    "source": [
     "## Get Hemisphere images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Combine all scrapped data into a dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'news_title': \"Meet the People Behind NASA's Perseverance Rover\",\n",
+       " 'news_p': \"These are the scientists and engineers who built NASA's next Mars rover and who will guide it to a safe landing in Jezero Crater. \",\n",
+       " 'featured_image': 'https://www.jpl.nasa.gov//spaceimages/images/mediumsize/PIA17832_ip.jpg',\n",
+       " 'mars_weather': 'Sol 506 (2020-04-29) low -93.5ºC (-136.2ºF) high -3.7ºC (25.3ºF)\\nwinds from the WNW at 4.5 m/s (10.1 mph) gusting to 15.6 m/s (34.8 mph)\\npressure at 6.80 hPa',\n",
+       " 'mars_fact_table': [                      0                              1\n",
+       "  0  Equatorial Diameter:                       6,792 km\n",
+       "  1       Polar Diameter:                       6,752 km\n",
+       "  2                 Mass:  6.39 × 10^23 kg (0.11 Earths)\n",
+       "  3                Moons:            2 (Phobos & Deimos)\n",
+       "  4       Orbit Distance:       227,943,824 km (1.38 AU)\n",
+       "  5         Orbit Period:           687 days (1.9 years)\n",
+       "  6  Surface Temperature:                   -87 to -5 °C\n",
+       "  7         First Record:              2nd millennium BC\n",
+       "  8          Recorded By:           Egyptian astronomers]}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_entry = {}\n",
+    "\n",
+    "data_entry['news_title'] = news_title\n",
+    "data_entry['news_p'] = news_p\n",
+    "data_entry['featured_image'] = featured_image_url\n",
+    "data_entry['mars_weather'] = mars_weather\n",
+    "data_entry['mars_fact_table'] = mars_fact_table\n",
+    "\n",
+    "data_entry"
    ]
   },
   {
