--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -8,30 +8,22 @@
    "source": [
     "# Dependencies\n",
     "from bs4 import BeautifulSoup\n",
-    "import requests\n",
     "from splinter import Browser\n",
     "from splinter.exceptions import ElementDoesNotExist\n",
     "\n",
     "import re\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/bin/chromedriver\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# https://splinter.readthedocs.io/en/latest/drivers/chrome.html\n",
-    "!which chromedriver"
+    "#!which chromedriver"
    ]
   },
   {
@@ -53,18 +45,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# URL of page to be scraped\n",
     "url = 'https://mars.nasa.gov/news/?page=0&per_page=40&order=publish_date+desc%2Ccreated_at+desc&search=&category=19%2C165%2C184%2C204&blank_scope=Latest'\n",
-    "browser.visit(url)"
+    "browser.visit(url)\n",
+    "time.sleep(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -72,8 +65,8 @@
      "output_type": "stream",
      "text": [
       "Scrapping Complete!\n",
-      "Meet the People Behind NASA's Perseverance Rover\n",
-      "These are the scientists and engineers who built NASA's next Mars rover and who will guide it to a safe landing in Jezero Crater. \n"
+      "NASA's Perseverance Rover Will Look at Mars Through These 'Eyes'\n",
+      "A pair of zoomable cameras will help scientists and rover drivers with high-resolution color images.\n"
      ]
     }
    ],
@@ -83,17 +76,12 @@
     "soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
     "grid = soup.find('ul', class_='item_list')\n",
-    "\n",
     "article = grid.find('li', class_='slide')\n",
-    "\n",
     "news_title = article.find('div', class_='content_title').text\n",
-    "\n",
     "news_p = article.find('div', class_='article_teaser_body').text\n",
     "\n",
     "print('Scrapping Complete!')\n",
-    "\n",
     "print(news_title)\n",
-    "\n",
     "print(news_p)"
    ]
   },
@@ -106,18 +94,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# URL of page to be scraped\n",
     "url = 'https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars'\n",
-    "browser.visit(url)"
+    "browser.visit(url)\n",
+    "time.sleep(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -134,36 +123,21 @@
     "html = browser.html\n",
     "soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
+    "#open featured image\n",
     "browser.click_link_by_partial_text('FULL IMAGE')\n",
-    "#browser.links.find_by_partial_text('FULL IMAGE')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://www.jpl.nasa.gov//spaceimages/images/mediumsize/PIA17832_ip.jpg'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "#browser.links.find_by_partial_text('FULL IMAGE')\n",
+    "time.sleep(2)\n",
+    "\n",
     "html = browser.html\n",
     "soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
-    "image_relative_path = soup.find('img', class_='fancybox-image')\n",
-    "image_relative_path = image_relative_path['src']\n",
+    "img_tag = soup.find('img', class_='fancybox-image')\n",
+    "image_relative_path = img_tag['src']\n",
     "\n",
-    "featured_image_url = 'https://www.jpl.nasa.gov/' + image_relative_path\n",
+    "#src has relative path only combine with website url\n",
+    "featured_image_url = 'https://www.jpl.nasa.gov' + image_relative_path\n",
     "\n",
-    "image_relative_path\n",
+    "print('Scrapping Complete!')\n",
     "featured_image_url"
    ]
   },
@@ -176,18 +150,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# URL of page to be scraped\n",
     "url = 'https://twitter.com/marswxreport?lang=en'\n",
-    "browser.visit(url)"
+    "browser.visit(url)\n",
+    "time.sleep(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -200,10 +175,10 @@
     {
      "data": {
       "text/plain": [
-       "'Sol 506 (2020-04-29) low -93.5ºC (-136.2ºF) high -3.7ºC (25.3ºF)\\nwinds from the WNW at 4.5 m/s (10.1 mph) gusting to 15.6 m/s (34.8 mph)\\npressure at 6.80 hPa'"
+       "'Sol 507 (2020-04-30) low -92.1ºC (-133.7ºF) high -2.4ºC (27.7ºF)\\nwinds from the SW at 5.0 m/s (11.1 mph) gusting to 18.2 m/s (40.6 mph)\\npressure at 6.80 hPa'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,11 +189,10 @@
     "soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
     "mars_weather = soup.find('span', text = re.compile('InSight sol')).text\n",
-    "\n",
+    "    \n",
     "mars_weather = mars_weather.replace('InSight s', 'S') \n",
     "\n",
     "print('Scrapping Complete!')\n",
-    "\n",
     "mars_weather"
    ]
   },
@@ -231,47 +205,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# URL of page to be scraped\n",
     "url = 'https://space-facts.com/mars/'\n",
-    "browser.visit(url)"
+    "browser.visit(url)\n",
+    "time.sleep(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Scrapping Complete!\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[                      0                              1\n",
-       " 0  Equatorial Diameter:                       6,792 km\n",
-       " 1       Polar Diameter:                       6,752 km\n",
-       " 2                 Mass:  6.39 × 10^23 kg (0.11 Earths)\n",
-       " 3                Moons:            2 (Phobos & Deimos)\n",
-       " 4       Orbit Distance:       227,943,824 km (1.38 AU)\n",
-       " 5         Orbit Period:           687 days (1.9 years)\n",
-       " 6  Surface Temperature:                   -87 to -5 °C\n",
-       " 7         First Record:              2nd millennium BC\n",
-       " 8          Recorded By:           Egyptian astronomers]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Scrape Page\n",
     "html = browser.html\n",
@@ -279,10 +227,9 @@
     "\n",
     "mars_fact_table = soup.find('table', class_=\"tablepress tablepress-id-p-mars\")\n",
     "\n",
-    "mars_fact_table = pd.read_html(str(mars_fact_table)) #[0]\n",
+    "mars_fact_table = pd.read_html(str(mars_fact_table))\n",
     "\n",
     "print('Scrapping Complete!')\n",
-    "\n",
     "mars_fact_table"
    ]
   },
@@ -298,14 +245,72 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# URL of page to be scraped\n",
+    "url = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'\n",
+    "browser.visit(url)\n",
+    "time.sleep(2)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Scrape Page\n",
+    "html = browser.html\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "#soup.find_all('a', class_='itemLink product-item')\n",
+    "\n",
+    "hemisphere_image_urls = []\n",
+    "hemispheres = []\n",
+    "count = 0\n",
+    "\n",
+    "results = soup.find_all('a', class_='itemLink product-item')\n",
+    "\n",
+    "#get the hemisphere names only from main page\n",
+    "for result in results:\n",
+    "    try:\n",
+    "        hemisphere_name = result.find('h3').text\n",
+    "        hemispheres.append(hemisphere_name)\n",
+    "\n",
+    "    except:\n",
+    "        count += 1\n",
+    "        \n",
+    "hemispheres\n",
+    "\n",
+    "#cylcle through each hemisphere page and save image url\n",
+    "for hemisphere in hemispheres:\n",
+    "    \n",
+    "    hemisphere_info = {}\n",
+    "    \n",
+    "    #go into page of hemisphere\n",
+    "    browser.click_link_by_partial_text(hemisphere)\n",
+    "    time.sleep(2)\n",
+    "    \n",
+    "    html = browser.html\n",
+    "    soup = BeautifulSoup(html, 'html.parser')\n",
+    "    \n",
+    "    #scrape relative path from src\n",
+    "    img_ralative_path = soup.find('img', class_=\"wide-image\")['src']\n",
+    "    \n",
+    "    #combine relative path of image to get full url\n",
+    "    img_url = 'https://astrogeology.usgs.gov' + img_ralative_path\n",
+    "    \n",
+    "    #add information to dictionary and main list\n",
+    "    hemisphere_info['title'] = hemisphere\n",
+    "    hemisphere_info['img_url'] = img_url\n",
+    "    \n",
+    "    hemisphere_image_urls.append(hemisphere_info)\n",
+    "    \n",
+    "    #go back to main page\n",
+    "    browser.back()\n",
+    "    \n",
+    "print('Scrapping Complete!')\n",
+    "hemisphere_image_urls"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -316,33 +321,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'news_title': \"Meet the People Behind NASA's Perseverance Rover\",\n",
-       " 'news_p': \"These are the scientists and engineers who built NASA's next Mars rover and who will guide it to a safe landing in Jezero Crater. \",\n",
-       " 'featured_image': 'https://www.jpl.nasa.gov//spaceimages/images/mediumsize/PIA17832_ip.jpg',\n",
-       " 'mars_weather': 'Sol 506 (2020-04-29) low -93.5ºC (-136.2ºF) high -3.7ºC (25.3ºF)\\nwinds from the WNW at 4.5 m/s (10.1 mph) gusting to 15.6 m/s (34.8 mph)\\npressure at 6.80 hPa',\n",
-       " 'mars_fact_table': [                      0                              1\n",
-       "  0  Equatorial Diameter:                       6,792 km\n",
-       "  1       Polar Diameter:                       6,752 km\n",
-       "  2                 Mass:  6.39 × 10^23 kg (0.11 Earths)\n",
-       "  3                Moons:            2 (Phobos & Deimos)\n",
-       "  4       Orbit Distance:       227,943,824 km (1.38 AU)\n",
-       "  5         Orbit Period:           687 days (1.9 years)\n",
-       "  6  Surface Temperature:                   -87 to -5 °C\n",
-       "  7         First Record:              2nd millennium BC\n",
-       "  8          Recorded By:           Egyptian astronomers]}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_entry = {}\n",
     "\n",
@@ -351,6 +332,8 @@
     "data_entry['featured_image'] = featured_image_url\n",
     "data_entry['mars_weather'] = mars_weather\n",
     "data_entry['mars_fact_table'] = mars_fact_table\n",
+    "data_entry['hemisphere_image_urls'] = hemisphere_image_urls\n",
+    "\n",
     "\n",
     "data_entry"
    ]
