--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -279,8 +279,6 @@
     "    except:\n",
     "        count += 1\n",
     "        \n",
-    "hemispheres\n",
-    "\n",
     "#cylcle through each hemisphere page and save image url\n",
     "for hemisphere in hemispheres:\n",
     "    \n",
@@ -294,10 +292,10 @@
     "    soup = BeautifulSoup(html, 'html.parser')\n",
     "    \n",
     "    #scrape relative path from src\n",
-    "    img_ralative_path = soup.find('img', class_=\"wide-image\")['src']\n",
+    "    img_relative_path = soup.find('img', class_=\"wide-image\")['src']\n",
     "    \n",
     "    #combine relative path of image to get full url\n",
-    "    img_url = 'https://astrogeology.usgs.gov' + img_ralative_path\n",
+    "    img_url = 'https://astrogeology.usgs.gov' + img_relative_path\n",
     "    \n",
     "    #add information to dictionary and main list\n",
     "    hemisphere_info['title'] = hemisphere\n",
